--- a/css/styles.css
+++ b/css/styles.css
@@ -199,11 +199,12 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-/*  section 2-3*/
+/*  SECTION 2+3 */
 .section {
   background-color: var(--white-color);
   padding-top: 120px;
   padding-bottom: 120px;
+  max-width: 1440px;
 }
 
 .section-list-wrap {
