--- a/css/styles.css
+++ b/css/styles.css
@@ -200,6 +200,10 @@ body {
 }
 
 /*  SECTION 2+3 */
+.section-two {
+  max-width: 1440px;
+}
+
 .section {
   background-color: var(--white-color);
   padding-top: 120px;
