--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,7 @@ body {
 .hero-section {
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
   background-image: linear-gradient(
       to right,
       rgba(46, 47, 66, 0.7),
